MiniGoCompiler/src/syntaxchecker/generated/MiniGoCompilerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/sharonblancopiedra/Documents/VII SEMESTRE/COMPILADORES/SEMANA 12/MiniGoCompiler/MiniGoCompiler/src/MiniGoCompiler.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace syntaxchecker.generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class MiniGoCompilerParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PACKAGE=1, IF=2, ELSE=3, FOR=4, SWITCH=5, CASE=6, DEFAULT=7, VAR=8, TYPE=9, 
		FUNC=10, STRUCT=11, APPEND=12, LEN=13, CAP=14, PRINT=15, PRINTLN=16, RETURN=17, 
		BREAK=18, CONTINUE=19, SEMI=20, COMMA=21, DOT=22, COLON=23, EQUAL=24, 
		DECLARE=25, LEFTP=26, RIGHTP=27, LEFTB=28, RIGHTB=29, LEFTCB=30, RIGHTCB=31, 
		DLESSEQ=32, DMOREEQ=33, ANDHATEQ=34, ADDEQ=35, SUBEQ=36, ANDEQ=37, OREQ=38, 
		MULEQ=39, DIVEQ=40, MODEQ=41, HATEQ=42, INC=43, DEC=44, DLESS=45, DMORE=46, 
		ANDHAT=47, AND=48, ADD=49, SUB=50, OR=51, HAT=52, EQEQ=53, NOTEQ=54, LESSEQ=55, 
		LESS=56, MOREEQ=57, MORET=58, DAND=59, DOR=60, MUL=61, DIV=62, MOD=63, 
		NOT=64, IDENTIFIER=65, INTLITERAL=66, FLOATLITERAL=67, RUNELITERAL=68, 
		RAWSTRINGLITERAL=69, INTERPRETEDSTRINGLITERAL=70, LINE_COMMENT=71, BLOCK_COMMENT=72, 
		WS=73;
	public const int
		RULE_root = 0, RULE_topDeclarationList = 1, RULE_variableDecl = 2, RULE_innerVarDecls = 3, 
		RULE_singleVarDecl = 4, RULE_singleVarDeclNoExps = 5, RULE_typeDecl = 6, 
		RULE_innerTypeDecls = 7, RULE_singleTypeDecl = 8, RULE_funcDecl = 9, RULE_funcFrontDecl = 10, 
		RULE_funcArgDecls = 11, RULE_declType = 12, RULE_sliceDeclType = 13, RULE_arrayDeclType = 14, 
		RULE_structDeclType = 15, RULE_structMemDecls = 16, RULE_identifierList = 17, 
		RULE_expressionList = 18, RULE_expression = 19, RULE_primaryExpression = 20, 
		RULE_operand = 21, RULE_literal = 22, RULE_index = 23, RULE_arguments = 24, 
		RULE_selector = 25, RULE_appendExpression = 26, RULE_lengthExpression = 27, 
		RULE_capExpression = 28, RULE_statementList = 29, RULE_block = 30, RULE_statement = 31, 
		RULE_simpleStatement = 32, RULE_assignmentStatement = 33, RULE_ifStatement = 34, 
		RULE_loop = 35, RULE_switchStmt = 36, RULE_expressionCaseClauseList = 37, 
		RULE_expressionCaseClause = 38, RULE_expressionSwitchCase = 39, RULE_identifier = 40;
	public static readonly string[] ruleNames = {
		"root", "topDeclarationList", "variableDecl", "innerVarDecls", "singleVarDecl", 
		"singleVarDeclNoExps", "typeDecl", "innerTypeDecls", "singleTypeDecl", 
		"funcDecl", "funcFrontDecl", "funcArgDecls", "declType", "sliceDeclType", 
		"arrayDeclType", "structDeclType", "structMemDecls", "identifierList", 
		"expressionList", "expression", "primaryExpression", "operand", "literal", 
		"index", "arguments", "selector", "appendExpression", "lengthExpression", 
		"capExpression", "statementList", "block", "statement", "simpleStatement", 
		"assignmentStatement", "ifStatement", "loop", "switchStmt", "expressionCaseClauseList", 
		"expressionCaseClause", "expressionSwitchCase", "identifier"
	};

	private static readonly string[] _LiteralNames = {
		null, "'package'", "'if'", "'else'", "'for'", "'switch'", "'case'", "'default'", 
		"'var'", "'type'", "'func'", "'struct'", "'append'", "'len'", "'cap'", 
		"'print'", "'println'", "'return'", "'break'", "'continue'", "';'", "','", 
		"'.'", "':'", "'='", "':='", "'('", "')'", "'['", "']'", "'{'", "'}'", 
		"'<<='", "'>>='", "'&^='", "'+='", "'-='", "'&='", "'|='", "'*='", "'/='", 
		"'%='", "'^='", "'++'", "'--'", "'<<'", "'>>'", "'&^'", "'&'", "'+'", 
		"'-'", "'|'", "'^'", "'=='", "'!='", "'<='", "'<'", "'>='", "'>'", "'&&'", 
		"'||'", "'*'", "'/'", "'%'", "'!'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PACKAGE", "IF", "ELSE", "FOR", "SWITCH", "CASE", "DEFAULT", "VAR", 
		"TYPE", "FUNC", "STRUCT", "APPEND", "LEN", "CAP", "PRINT", "PRINTLN", 
		"RETURN", "BREAK", "CONTINUE", "SEMI", "COMMA", "DOT", "COLON", "EQUAL", 
		"DECLARE", "LEFTP", "RIGHTP", "LEFTB", "RIGHTB", "LEFTCB", "RIGHTCB", 
		"DLESSEQ", "DMOREEQ", "ANDHATEQ", "ADDEQ", "SUBEQ", "ANDEQ", "OREQ", "MULEQ", 
		"DIVEQ", "MODEQ", "HATEQ", "INC", "DEC", "DLESS", "DMORE", "ANDHAT", "AND", 
		"ADD", "SUB", "OR", "HAT", "EQEQ", "NOTEQ", "LESSEQ", "LESS", "MOREEQ", 
		"MORET", "DAND", "DOR", "MUL", "DIV", "MOD", "NOT", "IDENTIFIER", "INTLITERAL", 
		"FLOATLITERAL", "RUNELITERAL", "RAWSTRINGLITERAL", "INTERPRETEDSTRINGLITERAL", 
		"LINE_COMMENT", "BLOCK_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MiniGoCompiler.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MiniGoCompilerParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MiniGoCompilerParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MiniGoCompilerParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RootContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PACKAGE() { return GetToken(MiniGoCompilerParser.PACKAGE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(MiniGoCompilerParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(MiniGoCompilerParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TopDeclarationListContext topDeclarationList() {
			return GetRuleContext<TopDeclarationListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MiniGoCompilerParser.Eof, 0); }
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.EnterRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.ExitRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoCompilerVisitor<TResult> typedVisitor = visitor as IMiniGoCompilerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			Match(PACKAGE);
			State = 83;
			Match(IDENTIFIER);
			State = 84;
			Match(SEMI);
			State = 85;
			topDeclarationList();
			State = 86;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopDeclarationListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclContext[] variableDecl() {
			return GetRuleContexts<VariableDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclContext variableDecl(int i) {
			return GetRuleContext<VariableDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclContext[] typeDecl() {
			return GetRuleContexts<TypeDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclContext typeDecl(int i) {
			return GetRuleContext<TypeDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclContext[] funcDecl() {
			return GetRuleContexts<FuncDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclContext funcDecl(int i) {
			return GetRuleContext<FuncDeclContext>(i);
		}
		public TopDeclarationListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topDeclarationList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.EnterTopDeclarationList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.ExitTopDeclarationList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoCompilerVisitor<TResult> typedVisitor = visitor as IMiniGoCompilerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTopDeclarationList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TopDeclarationListContext topDeclarationList() {
		TopDeclarationListContext _localctx = new TopDeclarationListContext(Context, State);
		EnterRule(_localctx, 2, RULE_topDeclarationList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1792L) != 0)) {
				{
				State = 91;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case VAR:
					{
					State = 88;
					variableDecl();
					}
					break;
				case TYPE:
					{
					State = 89;
					typeDecl();
					}
					break;
				case FUNC:
					{
					State = 90;
					funcDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 95;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR() { return GetToken(MiniGoCompilerParser.VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SingleVarDeclContext singleVarDecl() {
			return GetRuleContext<SingleVarDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(MiniGoCompilerParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEFTP() { return GetToken(MiniGoCompilerParser.LEFTP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RIGHTP() { return GetToken(MiniGoCompilerParser.RIGHTP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public InnerVarDeclsContext innerVarDecls() {
			return GetRuleContext<InnerVarDeclsContext>(0);
		}
		public VariableDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.EnterVariableDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.ExitVariableDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoCompilerVisitor<TResult> typedVisitor = visitor as IMiniGoCompilerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclContext variableDecl() {
		VariableDeclContext _localctx = new VariableDeclContext(Context, State);
		EnterRule(_localctx, 4, RULE_variableDecl);
		int _la;
		try {
			State = 107;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96;
				Match(VAR);
				State = 97;
				singleVarDecl();
				State = 98;
				Match(SEMI);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 100;
				Match(VAR);
				State = 101;
				Match(LEFTP);
				State = 103;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==IDENTIFIER) {
					{
					State = 102;
					innerVarDecls();
					}
				}

				State = 105;
				Match(RIGHTP);
				State = 106;
				Match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InnerVarDeclsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SingleVarDeclContext[] singleVarDecl() {
			return GetRuleContexts<SingleVarDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SingleVarDeclContext singleVarDecl(int i) {
			return GetRuleContext<SingleVarDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SEMI() { return GetTokens(MiniGoCompilerParser.SEMI); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI(int i) {
			return GetToken(MiniGoCompilerParser.SEMI, i);
		}
		public InnerVarDeclsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_innerVarDecls; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.EnterInnerVarDecls(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMiniGoCompilerListener typedListener = listener as IMiniGoCompilerListener;
			if (typedListener != null) typedListener.ExitInnerVarDecls(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMiniGoCompilerVisitor<TResult> typedVisitor = visitor as IMiniGoCompilerVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInnerVarDecls(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InnerVarDeclsContext innerVarDecls() {
		InnerVarDeclsContext _localctx = new InnerVarDeclsContext(Context, State);
		EnterRule(_localctx, 6, RULE_innerVarDecls);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 109;
				singleVarDecl();
				State = 110;
				Match(SEMI);
				}
				}
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
